# Breakout

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: basic.fs  basic.vs  text.fs  text.vs
src/: main.c
src/entity/: entity.c  entity.h
src/gfx/: game.c  game.h  renderer.c  renderer.h  shader.c  shader.h  text.c  text.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h
src/util/: aabb.h  defs.h  linked_list.c  linked_list.h  sound.c  types.h
